<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <com.nsl.app.commonutils.CustomTextViewBold
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currenr_stock"
        android:textColor="@color/defaultcolor"
        android:textSize="@dimen/_15sdp" />

    <com.nsl.app.commonutils.CustomTextViewLight
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="@dimen/_12sdp" />

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.nsl.app.commonutils.CustomTextViewLight
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/DATE" />

            <com.nsl.app.commonutils.CustomTextViewNormal
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/bgr"
                android:gravity="center"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.nsl.app.commonutils.CustomTextViewLight
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quantity_placed" />

            <com.nsl.app.CustomEditTextNormal
                android:id="@+id/edittext_quantity_placed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/bgr"
                android:gravity="center"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/buttton_stock_placed_ok"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/checkmark" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/rowbottomcolor" />

    <com.nsl.app.commonutils.CustomTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/leftstock"
        android:textColor="@color/defaultcolor"
        android:textSize="@dimen/_15sdp" />

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:id="@+id/textview_currentstock_left_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp" />

    <com.nsl.app.commonutils.CustomTextViewLight
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-14dp"
        android:gravity="center"
        android:text="@string/packets"
        android:textColor="@color/rowbottomcolor"
        android:textSize="@dimen/_22sdp" />

    <com.nsl.app.ButtonPlus
        android:id="@+id/button_current_stock_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/close_button_background"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/close_button"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />


</LinearLayout>