<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:id="@+id/tv_timeslot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_18sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="left"
        android:text="@string/time_slot"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_18sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="left"
        android:text="@string/title"
        android:textColor="@color/green"
        android:textSize="@dimen/_11sdp" />

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:id="@+id/tv_comments"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_18sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="left"
        android:text="@string/comments"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@color/rowbottomcolor"></View>

</LinearLayout>