<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:id="@+id/tv_sr"
        android:text="sr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black" />

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_div"
        android:text="@string/division"
        android:gravity="center"

        android:textSize="@dimen/_12sdp"
        android:layout_weight="1"
        android:textColor="@color/black" />

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:id="@+id/tv_osa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/outsta"

        android:textSize="@dimen/_12sdp"
        android:layout_weight="1"
        android:textColor="@color/black"/>

    <com.nsl.app.commonutils.CustomTextViewNormal
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_aging"
        android:gravity="center"
        android:text="@string/aging"
        android:textSize="@dimen/_12sdp"
        android:layout_weight="1"
        android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@color/rowbottomcolor">

    </View>

</LinearLayout>